--- a/index.html
+++ b/index.html
@@ -12,43 +12,45 @@
   <main>
     <div class="faqCard">
       <div id="faq">
-	  <img id="headImg" src="./assets/images/icon-star.svg" />
-      <h1>FAQs</h1>
-	  </div>
-      <div class="accordionDiv">
-        <div class="expander">  
-	  	  <h2>What is Frontend Mentor, and how will it help me?</h2>
-          <img class="accordionButton" src="./assets/images/icon-plus.svg" alt="Toggle"/>
-		</div>
-        <p>Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building.</p>
-	  </div>
-      <div class="accordionDiv">
-        <div class="expander">  
-  		  <h2>Is Frontend Mentor free?</h2>
-          <img class="accordionButton" src="./assets/images/icon-plus.svg" alt="Toggle"/>
-		</div>
-        <p>Yes, Frontend Mentor offers both free and premium coding challenges, with the free option providing access to a range of projects suitable for all skill levels.</p>
+        <img id="headImg" src="./assets/images/icon-star.svg" />
+        <h1>FAQs</h1>
       </div>
       <div class="accordionDiv">
-        <div class="expander">  
+        <div class="expander" tabindex="0" aria-expanded="false" role="button" aria-controls="accordion1">  
+          <h2>What is Frontend Mentor, and how will it help me?</h2>
+          <img class="accordionButton" src="./assets/images/icon-plus.svg" alt="Toggle"/>
+        </div>
+        <p id="accordion1" class="accordionContent">Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building.</p>
+      </div>
+      <div class="accordionDiv">
+        <div class="expander" tabindex="0" aria-expanded="false" role="button" aria-controls="accordion2">  
+          <h2>Is Frontend Mentor free?</h2>
+          <img class="accordionButton" src="./assets/images/icon-plus.svg" alt="Toggle"/>
+        </div>
+        <p id="accordion2" class="accordionContent">Yes, Frontend Mentor offers both free and premium coding challenges, with the free option providing access to a range of projects suitable for all skill levels.</p>
+      </div>
+      <div class="accordionDiv">
+        <div class="expander" tabindex="0" aria-expanded="false" role="button" aria-controls="accordion3">  
           <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
           <img class="accordionButton" src="./assets/images/icon-plus.svg" alt="Toggle"/>
-		</div>
-        <p>Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent way to showcase your skills to potential employers!</p>
+        </div>
+        <p id="accordion3" class="accordionContent">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent way to showcase your skills to potential employers!</p>
       </div>
       <div class="accordionDiv">
-        <div class="expander">  
+        <div class="expander" tabindex="0" aria-expanded="false" role="button" aria-controls="accordion4">  
           <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
-		  <img class="accordionButton" src="./assets/images/icon-plus.svg" alt="Toggle"/>
-		</div>
-        <p>The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask questions and seek support from other community members.</p>
+          <img class="accordionButton" src="./assets/images/icon-plus.svg" alt="Toggle"/>
+        </div>
+        <p id="accordion4" class="accordionContent">The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask questions and seek support from other community members.</p>
       </div>
     </div>
   </main>
   <footer>
-    <div class="attribution"><p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
+    <div class="attribution">
+      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
       <p>Coded by Esau @ <a href="https://cursebreakers.net" target="_blank">Cursebreakers LLC</a>.</p>
     </div>
   </footer>
 </body>
 </html>
+
